# signal-atlas

./: .env.airflow.example  .env.aws.example  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.pipeline  Makefile  README.md  TODO.md  alembic.ini  docker-compose.airflow.yml  docker-compose.prod.yml  docker-compose.yml  mlflow_upgrade_plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260324_01_initial_v1_schema.py  20260325_02_add_llm_rate_limit_reservations.py  20260328_03_add_cleaned_text_to_raw_articles.py  20260401_04_add_embeddings_and_signals.py  20260401_05_embedding_text_to_vector.py  20260402_06_add_simulation_tables.py  20260416_07_add_mlflow_run_id_to_sim_writers.py
archive/dags/: extraction_dag.py  ingestion_dag.py  simulation_dag.py
config/: feeds.yaml  personas.yaml  writers.yaml
dags/: extraction_dag.py  simulation_dag.py
scripts/: airflow_ec2_userdata.sh  assess_entity_extraction_batch.py  backfill_cleaned_text.py  compare_providers.py  db_migrate.sh  evaluate_guardian_groq_batch.py  evaluate_guardian_map_batch.py  init_db.py  seed_feeds.py  test_groq_direct.py  test_openrouter.py
src/news_pipeline/: __init__.py  config.py  contracts.py  utils.py
tests/: conftest.py
tests/test_api/: test_api.py  test_dags.py  test_simulation_api.py
tests/test_extraction/: test_llm_and_extractors.py  test_prompt_sizing.py
tests/test_ingestion/: test_dedup.py  test_ingestion_dag.py  test_rss.py  test_scraper.py
tests/test_llm/: test_mlflow_tracking.py  test_rate_limit.py
(+41 files in other folders)
