[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-intelligence-pipeline"
version = "0.1.0"
description = "Portfolio-grade news intelligence pipeline with Airflow, MLflow, and FastAPI."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = [
  "alembic>=1.13.1,<2.0",
  "beautifulsoup4>=4.12,<5.0",
  "feedparser>=6.0,<7.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
  "lxml[html_clean]>=5.2,<6.0",
  "mlflow>=2.17,<3.0",
  "newspaper3k>=0.2.8",
  "psycopg2-binary>=2.9,<3.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "python-dotenv>=1.0,<2.0",
  "python-slugify>=8.0,<9.0",
  "pyyaml>=6.0,<7.0",
  "sqlalchemy>=1.4.36,<2.0",
  "tenacity>=9.0,<10.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.7,<0.8",
]
airflow = [
  "apache-airflow>=2.10,<2.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
